style: :iphone: Responsive Design
Se implementó responsive design para resoluciones más pequeñas.

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
                 <h1>Presupuesto Disponible:</h1>
                 <span id="presupuesto" class="fs-1">$</span>
                 <br><br>
-                <div class="row montoIngresos w-50 mx-auto text-start p-2 my-2">
-                    <p class="col 4">Monto Ingresos</p>
+                <div class="row montoIngresos text-start p-2 my-2">
+                    <p class="col 4">Monto Ingresos:</p>
                     <p id="montoIngresos" class="col-2">$</p>
                 </div>
-                <div class="row montoEgresos w-50 mx-auto text-start p-2 my-2">
-                    <p class="col 4">Monto Egresos</p>
+                <div class="row montoEgresos text-start p-2 my-2">
+                    <p class="col 4">Monto Egresos:</p>
                     <p id="montoEgresos" class="col-3">$</p>
                     <span class="col-2" id="porcentajeE">%</span>
                 </div>
@@ -38,7 +38,7 @@
         <section id="calculo">
             <div class="container text-center mt-5">
                 <form id="formEnvio" class="row justify-content-center">
-                    <select id="type" class="col-2 form-select" aria-label="Default select example">
+                    <select id="type" class="col-2 col-1-sm form-select" aria-label="Default select example">
                         <option value="1">+</option>
                         <option value="2">-</option>
                     </select>
@@ -47,7 +47,8 @@
 
                     <input type="text" class="col-4 form-control" id="amount" placeholder="$$$$$">
 
-                    <button id="button" class="cssbuttons-io-button col-1">Add
+                    <button id="button" class="cssbuttons-io-button col-1">
+                        Add
                         <div class="icon">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
                                 <path fill="none" d="M0 0h24v24H0z"></path>
