--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
                 <br><br>
                 <div class="row montoIngresos text-start p-2 my-2">
                     <p class="col 4">Monto Ingresos:</p>
-                    <p id="montoIngresos" class="col-2">$</p>
+                    <p id="montoIngresos" class="col-7">$</p>
                 </div>
                 <div class="row montoEgresos text-start p-2 my-2">
                     <p class="col 4">Monto Egresos:</p>
-                    <p id="montoEgresos" class="col-3">$</p>
+                    <p id="montoEgresos" class="col-5">$</p>
                     <span class="col-2" id="porcentajeE">%</span>
                 </div>
             </div>
@@ -67,7 +67,14 @@
                 <div class="title col-9 d-flex justify-content-center">
                     <h2 style="color:white">Ingresos</h2>
                 </div>
-                <table id="tablaIngresos" class="table table-info justify-content-center">
+                <table id="tablaIngresos" class="table table-light justify-content-center mt-4">
+                    <thead>
+                        <tr>
+                            <th scope="col">Fecha</th>
+                            <th scope="col">Descripción</th>
+                            <th scope="col">Cantidad</th>
+                        </tr>
+                    </thead>
                     <tbody>
                     </tbody>
                 </table>
@@ -76,7 +83,14 @@
                 <div class="title col-9 d-flex justify-content-center">
                     <h2 style="color:white">Egresos</h2>
                 </div>
-                <table id="tablaEgresos" class="table table-info justify-content-center">
+                <table id="tablaEgresos" class="table table-light justify-content-center mt-4">
+                    <thead>
+                        <tr>
+                            <th scope="col">Fecha</th>
+                            <th scope="col">Descripción</th>
+                            <th scope="col">Cantidad</th>
+                        </tr>
+                    </thead>
                     <tbody>
                     </tbody>
                 </table>
@@ -87,9 +101,13 @@
             <div class="container">
                 <div class="row">
                     <div class="d-grid gap mt-5" id="reload">
-                        <button class=" button w-75 mx-auto text-start p-2 my-2 text-center">Actualizar
+                        <button class=" button w-75 mx-auto p-2 my-2 text-center">Actualizar
                             Gráfica
                         </button>
+                    </div>
+                    <div class="d-grid gap mt-2" id="delete">
+                        <button class="buttonDelete w-75 mx-auto text-center p-2 my-12" id="deleteButton"> Borrar
+                            Datos</button>
                     </div>
                     <div id="c2" class="col 1 h-25 w-25">
                         <div id="chart-container" class="chart "></div>
@@ -103,6 +121,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
         crossorigin="anonymous"></script>
+
     <!------- Apache --------->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/5.4.2/echarts.min.js"></script>
 </body>
