style: :lipstick: Grafica
Se modificó el estilo de la gráfica

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <!------ Javascript-------->
     <script src="main.js" defer type="module"></script>
+
+    <!-----Sweet Alert------->
+    <script src="sweetalert2.all.min.js"></script>
 </head>
 
 <body>
@@ -68,13 +71,6 @@
                     <h2 style="color:white">Ingresos</h2>
                 </div>
                 <table id="tablaIngresos" class="table table-light justify-content-center mt-4">
-                    <thead>
-                        <tr>
-                            <th scope="col">Fecha</th>
-                            <th scope="col">Descripción</th>
-                            <th scope="col">Cantidad</th>
-                        </tr>
-                    </thead>
                     <tbody>
                     </tbody>
                 </table>
@@ -84,13 +80,6 @@
                     <h2 style="color:white">Egresos</h2>
                 </div>
                 <table id="tablaEgresos" class="table table-light justify-content-center mt-4">
-                    <thead>
-                        <tr>
-                            <th scope="col">Fecha</th>
-                            <th scope="col">Descripción</th>
-                            <th scope="col">Cantidad</th>
-                        </tr>
-                    </thead>
                     <tbody>
                     </tbody>
                 </table>
@@ -124,6 +113,8 @@
 
     <!------- Apache --------->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/5.4.2/echarts.min.js"></script>
+
+
 </body>
 
 </html>
